[tool.poetry]
name = "dag-health-api"
version = "0.1.0"
description = "FastAPI service that checks health of DAG components asynchronously (level-by-level BFS)."
authors = ["Victor Ndayambaje <vndayambaje@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
httpx = "^0.27.2"
pydantic = "^2.9.2"
networkx = "^3.3"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

